synistralia-prod-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: synistralia-prod-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: synistralia-prod
    spec:
      containers:
      - name: synistralia-prod-server
        image: gcr.io/synistralia/synistralia:1.0.0
        ports:
        - containerPort: 3000
          name: http
