synistralia-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synistralia-prod-service
  labels:
    app: synistralia-prod-server
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  # loadBalancerIp: 35.186.245.99
  # sessionAffinity: ClientIP
  ports:
    # the port that this service should serve on
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: synistralia-prod
